# sg

./: meson.build  ru.screenload.sg.json
src/: gnome-screen-grabber.c  gnome-screen-grabber.h  main.c  meson.build  sg-application.c  sg-application.h
